--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-﻿<%@ Page Language="C#" AutoEventWireup="true" CodeBehind="Default.aspx.cs" Inherits="Trackr.Default" %>
+﻿<!doctype html>
 <html>
 	<head>
 		<title>Trackr</title>
