--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,16 @@
 		<script type="text/javascript" src="lib/jsonrpc-0.1.3.js"> </script>
 		<script type="text/javascript" src="lib/knockout-2.0.0.debug.js"> </script>
 		<script type="text/javascript" src="lib/signals.js"> </script>
-		<script type="text/javascript" src="lib/require.js" data-main="js/main"> </script>
+		<script type="text/javascript">
+			var require = {
+				baseUrl: 'js',
+				paths: {
+					'domReady': '/lib/domReady'
+				},
+				deps: ['main']
+			};
+		</script>
+		<script type="text/javascript" src="lib/require.js"> </script>
 	</head>
 	<body>
 		<div id="main">
