--- a/client/test/SpecRunner.html
+++ b/client/test/SpecRunner.html
@@ -7,6 +7,12 @@
 	<script type="text/javascript" src="lib/jasmine-1.2.0.rc3/jasmine.js"></script>
 	<script type="text/javascript" src="lib/jasmine-1.2.0.rc3/jasmine-html.js"></script>
 
+	<script type="text/javascript" src="../lib/underscore.js" > </script>
+	<script type="text/javascript" src="../lib/jquery-1.7.1.js"> </script>
+	<script type="text/javascript" src="../lib/jsonrpc-0.1.3.js"> </script>
+	<script type="text/javascript" src="../lib/knockout-2.0.0.debug.js"> </script>
+	<script type="text/javascript" src="../lib/signals.js"> </script>
+
 	<script type="text/javascript">
 		var require = {
 			baseUrl: '../js',
