--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript" src="lib/knockout-2.0.0.debug.js"> </script>
 		<script type="text/javascript" src="lib/signals.js"> </script>
 		<script type="text/javascript">
-			var require = {
+			window.require = {
 				baseUrl: 'js',
 				paths: {
 					'domReady': '/lib/domReady'
