Updated signals lib, added crossroads lib. Signals lib is now included as AMD dependency

--- a/client/index.html
+++ b/client/index.html
@@ -7,13 +7,14 @@
 		<script type="text/javascript" src="lib/underscore.js" > </script>
 		<script type="text/javascript" src="lib/jquery-1.7.1.js"> </script>
 		<script type="text/javascript" src="lib/knockout-2.0.0.debug.js"> </script>
-		<script type="text/javascript" src="lib/signals.js"> </script>
 		<script type="text/javascript">
 			window.require = {
 				baseUrl: 'js',
 				paths: {
 					'domReady': '/lib/domReady',
-					'text': '/lib/text'
+					'text': '/lib/text',
+					'signals': '/lib/signals',
+					'crossroads': '/lib/crossroads'
 				},
 				deps: ['main']
 			};
