--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
 					'domReady': '/lib/domReady',
 					'text': '/lib/text',
 					'signals': '/lib/signals',
+					'hasher': '/lib/hasher',
 					'crossroads': '/lib/crossroads'
 				},
 				deps: ['main']
