Updated KnockoutJS to 2.1.0

--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,13 @@
 		<link type="text/css" rel="stylesheet" href="css/style.css" />
 		<script type="text/javascript" src="lib/underscore.js" > </script>
 		<script type="text/javascript" src="lib/jquery-1.7.1.js"> </script>
-		<script type="text/javascript" src="lib/knockout-2.0.0.debug.js"> </script>
 		<script type="text/javascript">
 			window.require = {
 				baseUrl: 'js',
 				paths: {
 					'domReady': '/lib/domReady',
 					'text': '/lib/text',
+					'knockout': '/lib/knockout-2.1.0.debug',
 					'signals': '/lib/signals',
 					'hasher': '/lib/hasher',
 					'crossroads': '/lib/crossroads'
