Changed to CommonJS style wrapper

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 					'hasher': '/lib/hasher',
 					'crossroads': '/lib/crossroads'
 				},
-				deps: ['main']
+				deps: ['domReady!', 'main']
 			};
 		</script>
 		<script type="text/javascript" src="lib/require.js"> </script>
