Removed ScrollBindingHandler and Crossroads configuration

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
 			<div id="nodes">
 				<ul class="nodes" data-bind="template: { name: 'treenode', foreach: nodes }"></ul>
 			</div>
-			<div id="tasks" data-bind="bottomScroll: loadNextPage">
+			<div id="tasks">
 				<ul class="tasks" data-bind="template: { foreach: tasks }">
 					<li class="task">
 						<div class="tasksummary" data-bind="click: click">
