Tasks are now loaded from server

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>Trackr</title>
-	<script type="text/javascript" src="lib/jquery-1.7.1.js"></script>
 	<script type="text/javascript">
 		window.require = {
 			baseUrl: 'js',
@@ -13,7 +12,8 @@
 				'signals': '/lib/signals',
 				'hasher': '/lib/hasher',
 				'crossroads': '/lib/crossroads',
-				'underscore': '/lib/underscore'
+				'underscore': '/lib/underscore',
+				'jquery': '/lib/jquery-1.7.1'
 			},
 			deps: ['domReady!', 'main']
 		};
