--- a/client/index.html
+++ b/client/index.html
@@ -29,5 +29,11 @@
 		</li>
 	</ul>
 </div>
+<div data-bind="with: taskController">
+	<ul>
+		<li>Id: <span data-bind="text: id"></span></li>
+		<li>Title: <span data-bind="text: title"></span></li>
+	</ul>
+</div>
 </body>
 </html>
