TaskController renamed to TaskViewModel

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
 	<script type="text/javascript" src="lib/require.js"></script>
 </head>
 <body>
-<div data-bind="with: tasksController">
+<div data-bind="with: tasks">
 	<input type="text" data-bind="value: filter, valueUpdate: 'afterkeydown'">
 	<ul  data-bind="foreach: tasks">
 		<li>
